--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-graphql-source-toolkit": "^0.4.1",
     "gatsby-plugin-linaria": "^2.1.0",
     "gatsby-plugin-preact": "^4.0.9",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-tinacms": "^0.29.0",
     "linaria": "^1.4.0-beta.10",
     "node-fetch": "^2.6.0",
@@ -21,6 +22,7 @@
     "preact-render-to-string": "^5.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-tinacms-editor": "^0.29.0",
     "react-tinacms-inline": "^0.29.0",
     "styled-components": "^5.1.1"
